# SearchAI

./: README.md  client.py  main.py  pyproject.toml
fastmcp_server/: server.py
